# ur5_photo_creator

./: CMakeLists.txt  package.xml
scripts/: photo_creator.py  photo_node.py
src/: config.xml  firstMove.py  main.py  photo_creator.py
src/libs/: cubicInterpolation.py  ur.py
src/libs/examples/: record_configuration.xml
